# bf2fj

./: .gitmodules  LICENSE  README.md  definitions.py  pyproject.toml  requirements.txt
.github/workflows/: poetry-publish.yml
bf2fj/: __init__.py  bf2fj_cli.py  bf2fj_compiler.py  bf_classes.py  compiler_exceptions.py  flipjump_output_format.fj
brainfuck/: hello_world.bf
brainfuck/brainfuck.org/: README.md
brainfuck/brainfuck.org/bsort/: README.txt  bsort.fj
brainfuck/brainfuck.org/dbfi/: README.txt
brainfuck/brainfuck.org/dvorak/: README.txt
brainfuck/brainfuck.org/e/: README.txt
brainfuck/brainfuck.org/factorial/: README.txt
brainfuck/brainfuck.org/fib/: README.txt
brainfuck/brainfuck.org/isort/: README.txt  isort.b
brainfuck/brainfuck.org/jabh/: README.txt
brainfuck/brainfuck.org/random/: README.txt
brainfuck/brainfuck.org/rot13/: README.txt
brainfuck/brainfuck.org/sierpinski/: README.txt
brainfuck/brainfuck.org/squares/: README.txt
brainfuck/brainfuck.org/tictactoe/: README.txt  tictactoe.b
brainfuck/brainfuck.org/utm/: README.txt
brainfuck/brainfuck.org/xmastree/: README.txt
flipjump_outputs/: README.md
programs/: README.md
programs/brainfuck.org/: README.md
programs/brainfuck.org/bsort/: output
programs/brainfuck.org/collatz/: README.txt  collatz.fj
programs/brainfuck.org/dbf2c/: README.txt
programs/brainfuck.org/dbfi/: dbfi.fj  input
programs/brainfuck.org/e/: e.fj
programs/brainfuck.org/factorial/: factorial.fj
programs/brainfuck.org/factorial2/: README.txt  factorial2.b  factorial2.fj
programs/brainfuck.org/golden/: README.txt  golden.fj
programs/brainfuck.org/head/: README.txt  head.fj
programs/brainfuck.org/impeccable/: README.txt  impeccable.fj
programs/brainfuck.org/isort/: isort.fj
programs/brainfuck.org/life/: life.fj
programs/brainfuck.org/numwarp/: README.txt  numwarp.fj
programs/brainfuck.org/qsort/: README.txt  qsort.fj
programs/brainfuck.org/random/: random.fj
programs/brainfuck.org/short/: README.txt
programs/brainfuck.org/sierpinski/: sierpinski.fj
programs/brainfuck.org/squares/: squares.fj
programs/brainfuck.org/squares2/: README.txt  squares2.fj
programs/brainfuck.org/thuemorse/: README.txt  thuemorse.fj
programs/brainfuck.org/tictactoe/: tictactoe.fj
programs/brainfuck.org/utm/: utm.fj
programs/brainfuck.org/wc/: README.txt
programs/brainfuck.org/xmastree/: xmastree.fj
programs/brainfuck_archive/: README.md
programs/frans_faase/: README.md
programs/hello_100nops/: README.txt  hello_100nops.bf  hello_100nops.fj
programs/hello_world/: README.txt  hello_world.fj
programs/linusakesson/: README.md
programs/simple_prints/: README.md
programs/umueller-brainfuck/: README.md
src/: bf2fj.py  bf2fj_compiler.py  bf_classes.py  flipjump_output_format.fj  test_compile_all.py  test_compile_run_all.py
tests/: conftest.py  test_cases.py  test_compile_run_all.py
(+291 files in other folders)
